# lecture-ai-engineering

.github/workflows/: test.yml
day1/: day1_practice.ipynb
day1/01_streamlit_UI/: 01.ipynb  app.py  pyproject.toml
day1/02_streamlit_app/: 02.ipynb  pyproject.toml  requirements.txt
day5/演習1/models/: titanic_model.pkl
day5/演習2/: main.py
day5/演習3/tests/: test_model.py
